# TrackNetV3

./: .gitignore  AGENT.md  README.md  dataset.py  demo_live.py  demo_offline.py  demo_online.py  export_to_onnx.py  main.py  pyproject.toml  tracknet_infer.py  verify_onnx.py
.agent/draft/: modularization-v1.0.md  onnx-inference-modules-v2.0.md  refactor-module-boundary-v1.0.md
.agent/plan/: modularization-v1.0.md  modularization-v2.0-verification.txt  modularization-v2.0.md  onnx-inference-modules-v2.0.md  onnx-inference-modules.md  refactor-module-boundary-v1.0.md
demos/: demo_live.py  demo_offline.py  demo_online.py
pred_result/: tennis_ball.csv  tennis_ball_stream.csv
scripts/: test.py  train.py
tools/: correct_label.py  error_analysis.py  export_to_onnx.py  generate_mask_data.py  preprocess.py  verify_consolidation.py
tracknet-core/: pyproject.toml
tracknet-core/tracknet/core/config/: configs.py
tracknet-core/tracknet/core/evaluation/: predict.py
tracknet-core/tracknet/core/utils/: preprocessing.py  visualize.py
tracknet-pt/extras/demos/: demo_offline.py
tracknet-pt/extras/tools/: error_analysis.py  export_inpaintnet_onnx.py  export_tracknet_onnx.py  generate_mask_data.py  preprocess.py
tracknet-pt/tracknet/pt/datasets/: shuttlecock.py  video_iterable.py
tracknet-pt/tracknet/pt/evaluation/: metrics.py
tracknet-pt/tracknet/pt/inference/: helpers.py  streaming.py
tracknet-pt/tracknet/pt/models/: factory.py  inpaintnet.py  tracknet.py
tracknet-pt/tracknet/pt/scripts/: test.py  train.py
tracknet-pt/tracknet/pt/utils/: metric.py
tracknetv3/: __init__.py
tracknetv3-test/: pyproject.toml
tracknetv3-test/src/tracknetv3_test/: __init__.py
tracknetv3/config/: __init__.py
tracknetv3/datasets/: __init__.py  shuttlecock.py  video_iterable.py
tracknetv3/evaluation/: __init__.py  ensemble.py  metrics.py  predict.py
tracknetv3/inference/: __init__.py  config.py  helpers.py  offline.py  streaming.py  streaming_onnx.py
tracknetv3/models/: __init__.py  blocks.py  inpaintnet.py  tracknet.py
tracknetv3/utils/: __init__.py  general.py
utils/: general.py
