[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracknetv3"
version = "1.0.0"
description = "Badminton shuttlecock tracking with deep learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["deep learning", "computer vision", "object detection", "badminton", "shuttlecock tracking"]
authors = [
    {name = "TrackNetV3 Contributors"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "dash>=3.4.0",
    "matplotlib>=3.10.8",
    "numpy>=1.23.2,<2.0.0",
    "onnx>=1.19.0",
    "onnxscript>=0.5.0",
    "opencv-python>=4.4.0.46,<4.10.0",
    "pandas>=2.0.0",
    "parse>=1.20.2",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "pycocotools>=2.0.11",
    "tensorboard>=2.20.0",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tracknetv3*"]
exclude = ["tests", "demos", "tools", "scripts", "data", "pred_result", "output", "*.egg-info"]

[tool.setuptools.package-data]
"tracknetv3" = ["*.txt", "*.rst", "*.md"]

[tool.ruff]
line-length = 100
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
]
ignore = [
    "E203", # whitespace before ':' (black compatibility)
    "E501", # line too long (handled by ruff format)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "ARG002", # unused method argument (common in interface implementations)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ty.environment]
# Analyze for Python 3.11 to match project tooling
python-version = "3.11"

[tool.ty.analysis]
# Keep the default behavior; explicitly enable it for clarity
respect-type-ignore-comments = true

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
