[project]
name = "tracknetv3-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Louis LUO", email = "ssparkluo@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tracknetv3-test = "tracknetv3_test:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
